# RondOS

./: .gitignore  README.md  bochsrc.bxrc  build.ps1  disk.s  extract.py  loader.s  xmake.lua
kernel/: Cargo.toml  build.rs  i686-unknown-none.json  kernel.ld
kernel/.cargo/: config.toml
kernel/src/: interrupt.rs  io.rs  keyboard.rs  loader.rs  main.rs  os.rs  vga_buffer.rs  x86.rs
kernel/src/arch/x86/: intr.rs  mod.rs  pic.rs
kernel/src/io/: serial.rs  vga.rs
kernel/src/mm/: mod.rs  page.rs
kernel/src/platform/: mod.rs
kernel/src/thread/: mod.rs
kernel/src/utils/: mod.rs  singleton.rs
kernel/src/x86/: interrupt.rs  mod.rs  pic.rs  reg.rs
